# whiteboard

./: .gitignore  README.md  api_config.example.json  launcher.py  launcher_v2.py  main.py  pyproject.toml  requirements.txt  项目报告.md
core/: __init__.py  annotation_overlay.py  api_client.py  canvas.py  floating_menu.py  gesture_detector.py  gesture_engine.py  hand_detector.py  overlay_window.py  transformer_gesture.py  whiteboard_main.py
tools/: collect_gesture_data.py  collect_gestures.py  diagnose_dataset.py  diagnose_model.py  process_egogesture.py  train_gesture_model.py
